targets/sol/k3s/syncthing/syncthing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syncthing
  namespace: apps-privileged
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: syncthing
  template:
    metadata:
      labels:
        app: syncthing
    spec:
      hostNetwork: true
      securityContext:
        fsGroup: $MY_UID
      containers:
        - name: syncthing
          image: syncthing/syncthing:2.1.0
          securityContext:
            allowPrivilegeEscalation: false
          resources:
            limits:
              memory: 2Gi
            requests:
              memory: 128Mi
          readinessProbe:
            tcpSocket:
              port: 22000
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - name: syncthing-home
              mountPath: /var/syncthing
      volumes:
        - name: syncthing-home
          persistentVolumeClaim:
            claimName: syncthing-home-pvc
